Fix tex-overflow for task name on chrome

--- a/styles/components/task.scss
+++ b/styles/components/task.scss
@@ -54,10 +54,9 @@
     font-weight: bold;
     vertical-align: middle;
     max-width: 100%;
-    max-height: 40px;
-    max-width: 100%;
     text-overflow: ellipsis;
     overflow: hidden;
+    white-space: nowrap;
 
     & ~ .description-input {
       margin-top: 6px;
